Blinky LED now works.  These hacks need to be rolled into proper components but at least the synthesis works.

--- a/src/fpga/bootloader/radiant/.floorplanner.ini
+++ b/src/fpga/bootloader/radiant/.floorplanner.ini
@@ -1,6 +1,6 @@
 [General]
 dontShowBBoxOverlapWarning=false
-sceneInViewRect="@Variant(\0\0\0\x14\xc0\xf1,y\xa4x\xfc\xd7\xc0\xc7\xa8\xc6\x84:f`A\x10\xb1\x9c\xe9\xee\x42WA\0\xa7\xa6\xb1J\xcbp)"
+sceneInViewRect="@Variant(\0\0\0\x14\xc0\xf1\x99\x94Y\xb0\x8f,\xc0\xc9\x37\xc1u\fC\x98\x41\x10\xe7_\xad\x42\x38\x82\x41\0\xddI_\xe0\x33\x9a)"
 showCongestion=false
 showConnsBetween=false
 showConnsOutside=false
