Started to move away from MyHDL towards SpinalHDL as there were too many battles and bugs and progress was slow.  SpinalHDL seems to offer much more, including a highly configurable RISC V soft core also capable of higher clock speeds (ie. 25MHz to fit with the main clock domain) than FemtoRV32's 20MHz.

--- a/src/fpga/.gitignore
+++ b/src/fpga/.gitignore
@@ -1,6 +1,15 @@
+# TODO: REMOVE THE PYTEST STUFF ONCE THE MYHDL STUFF HAS BEEN REMOVED
 **/__pycache__
 **/.pytest_cache
 **/.eggs
 **/.venv
 **/*.egg-info
 bootloader/out/*
+
+.bloop
+.bsp
+.metals
+simWorkspace
+target
+tmp
+verbose.log
