Removed the Python / MyHDL entries.  Restricting 'target' to a directory.

--- a/src/fpga/.gitignore
+++ b/src/fpga/.gitignore
@@ -1,15 +1,7 @@
-# TODO: REMOVE THE PYTEST STUFF ONCE THE MYHDL STUFF HAS BEEN REMOVED
-**/__pycache__
-**/.pytest_cache
-**/.eggs
-**/.venv
-**/*.egg-info
-bootloader/out/*
-
 .bloop
 .bsp
 .metals
 simWorkspace
-target
+target/
 tmp
 verbose.log
